# jni-playground

./: .gitignore  README.md  build.cmd  build.sh
src/: CMakeLists.txt  main.c  pal_jni.c
src/bridge/: CMakeLists.txt  bridge.c  bridge.h  macros.h  pal_jni.c  pal_jni.h  pal_x509.c  pal_x509.h
src/managed/: AndroidX509CertificateReader.cs  DotNetHost.csproj  Interop.Crypto.cs  Interop.X509.cs  OpenSslX509CertificateReader.Android.cs  Program.cs  X509Test.cs
src/native/: CMakeLists.txt  main.c  x509_test.h
